--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "author": "Tim Smart <tim.smart@designworks.co.nz",
   "devDependencies": {
+    "babelify": "^6.3.0",
     "browserify": "^11.1.0",
+    "coverageify": "^1.0.4",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.0.1",
     "gulp-batch": "^1.0.5",
@@ -28,7 +30,14 @@
     "gulp-uglify": "^1.4.1",
     "gulp-util": "^3.0.6",
     "gulp-watch": "^4.3.5",
+    "jasmine-core": "^2.3.4",
+    "karma": "^0.13.9",
+    "karma-browserify": "^4.3.0",
+    "karma-coverage": "^0.5.2",
+    "karma-jasmine": "^0.3.6",
+    "karma-phantomjs-launcher": "^0.2.1",
     "partialify": "^3.1.5",
+    "phantomjs": "^1.9.18",
     "through2": "^2.0.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
