--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,13 @@
 {
   "parser": "babel-eslint",
 
+  "env": {
+    "node": true,
+    "browser": true
+  },
+
+  "extends": "eslint:recommended",
+
   "rules": {
     "brace-style": 2,
     "camelcase": 2,
