--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   },
   "dependencies": {
     "backbone": "^1.2.3",
+    "backbone-validation": "^0.11.5",
     "backbone.localstorage": "^1.1.16",
     "bluebird": "^2.10.0",
     "bootstrap": "twbs/bootstrap#v4-dev",
