--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "url": "git://github.com/tim-smart/html-starter-kit.git"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/.bin/karma start"
   },
   "author": "Tim Smart <tim.smart@designworks.co.nz",
+  "pkgify": {
+    "packages": {
+      "js": "./js"
+    }
+  },
   "devDependencies": {
     "babel-eslint": "^4.1.1",
     "babelify": "^6.3.0",
@@ -39,6 +44,7 @@
     "karma-phantomjs-launcher": "^0.2.1",
     "partialify": "^3.1.5",
     "phantomjs": "^1.9.18",
+    "pkgify": "^1.0.3",
     "require-globify": "^1.3.0",
     "through2": "^2.0.0",
     "vinyl-buffer": "^1.0.0",
@@ -46,9 +52,6 @@
     "watchify": "^3.4.0"
   },
   "dependencies": {
-    "backbone": "^1.2.3",
-    "backbone-validation": "^0.11.5",
-    "backbone.localstorage": "^1.1.16",
     "bluebird": "^2.10.0",
     "bootstrap": "twbs/bootstrap#v4-dev",
     "co": "^4.6.0",
