--- a/package.json
+++ b/package.json
@@ -53,16 +53,16 @@
     "watchify": "^3.4.0"
   },
   "dependencies": {
-    "bluebird": "^2.10.0",
     "bootstrap": "twbs/bootstrap#v4-dev",
     "co": "^4.6.0",
-    "jquery": "^2.1.4",
     "lodash": "^3.10.1",
-    "oop-utils": "^0.2.3",
-    "raf": "^3.1.0",
+    "lodash.assign": "^3.2.0",
+    "moment": "^2.10.6",
+    "numeral": "^1.5.3",
+    "slug": "^0.9.1",
+    "uuid": "^2.0.1",
     "vue": "^0.12.14",
     "vue-router": "^0.6.0",
-    "vue-validator": "^1.4.3",
-    "ydn.db": "^1.3.0"
+    "vue-validator": "^1.4.3"
   }
 }
