--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   },
   "dependencies": {
     "bootstrap": "twbs/bootstrap#v4-dev",
+    "fastclick": "^1.0.6",
     "lodash.assign": "^3.2.0",
     "moment": "^2.10.6",
     "slug": "^0.9.1",
