--- a/.client/package.json
+++ b/.client/package.json
@@ -34,6 +34,7 @@
     "gulp-sourcemaps": "^1.5.2",
     "gulp-spawn": "^0.3.0",
     "gulp-streamify": "0.0.5",
+    "gulp-uglify": "^1.4.1",
     "gulp-util": "^3.0.6",
     "gulp-watch": "^4.3.5",
     "jasmine-core": "^2.3.4",
