--- a/.client/package.json
+++ b/.client/package.json
@@ -54,6 +54,7 @@
     "watchify": "^3.4.0"
   },
   "dependencies": {
+    "blueimp-load-image": "^1.14.0",
     "bootstrap": "twbs/bootstrap#v4-dev",
     "fastclick": "^1.0.6",
     "lodash.assign": "^3.2.0",
