--- a/.client/package.json
+++ b/.client/package.json
@@ -60,6 +60,7 @@
     "lodash.assign": "^3.2.0",
     "moment": "^2.10.6",
     "slug": "^0.9.1",
+    "slugify": "^0.1.1",
     "uuid": "^2.0.1",
     "vue": "^0.12.14",
     "vue-router": "^0.6.0"
